Fix markAsReadButton colors

--- a/frederico-murakawa-ios/ViewControllers/ArticleDetailsVC.xib
+++ b/frederico-murakawa-ios/ViewControllers/ArticleDetailsVC.xib
@@ -84,9 +84,9 @@
                                                                 <constraint firstAttribute="height" constant="44" id="F6v-Ro-V0n"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <state key="normal" title=" ">
-                                                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             </state>
                                                         </button>
                                                     </subviews>
